2008-08-12 Jens Tkotz <jens@peino.de> 1.5.8-pl1-svn-b3

 * Change: Little code nicify. CSS fixes etc.

2008-08-11 Jens Tkotz <jens@peino.de> 1.5.8-pl1-svn-b2

 * Fix: Strenghtmeter not working.

 * Fix: Added strengthmeter for admin password in setup.

2008-08-11 Jens Tkotz <jens@peino.de> 1.5.8-pl1-svn-b1

 * Fix: Ecard broken. Popup was empty, preview broken.

 * New: Added special popup footer.

2008-08-05 Chris Kelly <ckdake@ckdake.com> 1.5.8

 * Release: 1.5.8

 Lots of changes, so you might want to look at:
 http://codex.gallery2.org/Gallery1:API_Changes_From_1.5.7_To_1.5.8

2008-08-11 Jens Tkotz <jens@peino.de>

 Recently, we retained Gotham Digital Science (GDS) to perform security audits on Gallery 1.6
 They found a lof security isses which we fixed in Gallery 1.6 and then merged to 1.5.8.
 As 1.6 has so many changes it was not possible to really port all changes.
 Result is a heavy codebase change in Gallery 1.5.8

 GDS found bugs in 21 catecories as they are:

 --- PRIO 1 ----
  1 - Insecure Command Execution
  2 - Cross Site Scripting (XSS)
  3 - Unauthorized Access to File System
  4 - Role-Based Authorization Not Adequately Enforced

 --- PRIO 2 ----
  5 - Application Insecurely Discloses Potentially Sensitive Data
  6 - Inadequate Password Complexity Enforcement
  7 - New Password Functionality Susceptible to Brute Force Attacks

 --- PRIO 3 ----
  8 - Inadequate Application Error Handling and Suppression
  9 - Username Enumeration
  10 - Log Forging

   --- PRIO 4 ----
  11 - Denial of Service Condition Possible
  12 - Un-mapped File Extensions Allow Source Code Disclosure
  13 - Lack of Web Root Clean-up and Insecure File Organization
  14 - Logout Option not Available on all Application Pages
  15 - Pages Do Not Refresh After Idle Session Timeout
  16 - Sensitive POST Data Exposed to Browser Caching
  17 - Password Reset Does not Include at least One Challenge Question
  18 - Application Account Lockout not Enforced